# TinySqliteWrapper

./: CMakeLists.txt  DBAdapter.cpp  DBAdapter.h  README.md  Record.cpp  Record.h  main.cpp
sqlite/: sqlite3.def  sqlite3.lib
